# doltclusterctl

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  NOTES.md  README.md  WORKSPACE  cluster.go  commands.go  commands_test.go  config.go  config_test.go  db.go  deps.bzl  go.mod  go.sum  kubernetes.go  main.go  main_test.go  nogo_config.json  test_toolchain.bzl  version.go  version_test.go  versions.bzl
e2e/: BUILD.bazel  README.md  applyprimarylabels_test.go  configmap_test.go  deployment_test.go  gracefulfailover_test.go  main_test.go  promotestandby_test.go  rollingrestart_test.go  run.sh  rundolt_test.go  serviceaccount_test.go  services_test.go  statefulset_test.go  testpod_test.go  tls_test.go
e2e/incluster/: BUILD.bazel  README.md  main_test.go
e2e/kind_bin/: BUILD.bazel  main.go
hack/: BUILD.bazel  bumpdeps.sh  coverage.sh  e2e.sh  gofmt.sh  gotool.bzl  prepush.sh
hack/bumpdeps/: BUILD.bazel  README.md  main.go
push/: BUILD.bazel  awsconfig  main.go  push.sh
testdata/: invalidroots.pem  nopemdata.pem
