load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//:test_toolchain.bzl", "any_platform_test_toolchain")

buildifier(
    name = "buildifier",
)

# gazelle:prefix github.com/dolthub/doltclusterctl
# gazelle:exclude proto
# gazelle:proto disable_global
# gazelle:go_naming_convention import
gazelle(name = "gazelle")

go_library(
    name = "doltclusterctl_lib",
    srcs = [
        "cluster.go",
        "commands.go",
        "config.go",
        "db.go",
        "kubernetes.go",
        "main.go",
        "version.go",
    ],
    importpath = "github.com/dolthub/doltclusterctl",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_cenkalti_backoff_v4//:backoff",
        "@com_github_go_sql_driver_mysql//:mysql",
        "@io_k8s_api//apps/v1:apps",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/fields",
        "@io_k8s_apimachinery//pkg/watch",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//rest",
    ],
)

go_binary(
    name = "doltclusterctl",
    embed = [":doltclusterctl_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "app_layer",
    srcs = [":doltclusterctl"],
    include_runfiles = True,
    package_dir = "app",
)

pkg_tar(
    name = "image_layer",
    symlinks = {
        "/usr/local/bin/doltclusterctl": "/app/doltclusterctl",
    },
    deps = [":app_layer"],
)

oci_image(
    name = "image",
    base = "@ubuntu2404",
    tars = [
        ":image_layer_transitioned",
    ],
    visibility = ["//visibility:public"],
)

oci_load(
    name = "image_load",
    image = "image",
    repo_tags = ["doltclusterctl:latest"],
    visibility = ["//visibility:public"],
)

platform_transition_filegroup(
    name = "image_layer_transitioned",
    srcs = [
        ":image_layer",
    ],
    # Cross-compile to linux but keep the host CPU so the image runs natively in
    # a host-arch kind node (amd64 on amd64 hosts/CI, arm64 on Apple Silicon).
    target_platform = select({
        "@platforms//cpu:aarch64": "//:aarch64-linux",
        "//conditions:default": "//:x86_64-linux",
    }),
    visibility = ["//visibility:private"],
)

filegroup(
    name = "image.tar",
    srcs = ["image_load"],
    output_group = "tarball",
    visibility = ["//visibility:public"],
)

go_test(
    name = "doltclusterctl_test",
    size = "small",
    srcs = [
        "commands_test.go",
        "config_test.go",
        "main_test.go",
        "version_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":doltclusterctl_lib"],
    deps = ["@com_github_stretchr_testify//assert"],
)

test_suite(
    name = "coverage_tests",
    tests = [
        ":doltclusterctl_test",
    ],
)

platform(
    name = "x86_64-linux",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    visibility = ["//visibility:public"],
)

platform(
    name = "aarch64-linux",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
    visibility = ["//visibility:public"],
)

# Marker constraint identifying a platform whose test targets are built only to
# be shipped as a data payload and run elsewhere (in a kind cluster), never
# executed by bazel. The incluster go_test is transitioned to one of the
# *-linux-incluster-test platforms below, which carry this constraint, and the
# any_platform_test_toolchain is scoped to it. See test_toolchain.bzl.
constraint_setting(name = "incluster_test_setting")

constraint_value(
    name = "incluster_test",
    constraint_setting = ":incluster_test_setting",
    visibility = ["//visibility:public"],
)

platform(
    name = "x86_64-linux-incluster-test",
    constraint_values = [":incluster_test"],
    parents = [":x86_64-linux"],
    visibility = ["//visibility:public"],
)

platform(
    name = "aarch64-linux-incluster-test",
    constraint_values = [":incluster_test"],
    parents = [":aarch64-linux"],
    visibility = ["//visibility:public"],
)

any_platform_test_toolchain(name = "incluster_test_toolchain_impl")

# A test toolchain (no use_target_platform_constraints) scoped via
# target_compatible_with to only the incluster-test marker platforms, so it
# replaces the strict default test toolchain only for the cross-compiled,
# data-only incluster test. Registered in MODULE.bazel.
toolchain(
    name = "incluster_test_toolchain",
    target_compatible_with = [":incluster_test"],
    toolchain = ":incluster_test_toolchain_impl",
    toolchain_type = "@bazel_tools//tools/test:default_test_toolchain_type",
    visibility = ["//visibility:public"],
)
