module(
    name = "com_github_dolthub_doltclusterctl",
)

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_oci", version = "2.2.5")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.14.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.0.1")

bazel_lib_toolchains = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
bazel_lib_toolchains.tar()

bazel_dep(name = "rules_go", version = "0.53.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.42.0", repo_name = "bazel_gazelle")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.2")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
go_deps.gazelle_default_attributes(
    build_file_generation = "on",
    directives = [
        "gazelle:proto disable_global",
    ],
)
use_repo(
    go_deps,
    "com_github_awslabs_amazon_ecr_credential_helper_ecr_login",
    "com_github_cenkalti_backoff_v4",
    "com_github_go_sql_driver_mysql",
    "com_github_google_safetext",
    "com_github_shopify_toxiproxy_v2",
    "com_github_stretchr_testify",
    "io_k8s_api",
    "io_k8s_apimachinery",
    "io_k8s_client_go",
    "io_k8s_sigs_e2e_framework",
    "io_k8s_sigs_kind",
)

use_repo(
    go_sdk,
    "go_host_compatible_sdk_label",
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "ubuntu2004",
    # Find at https://l.gcr.io/google/ubuntu2004
    digest = "sha256:3e34634cb8f2c818ea3407e8b1f884fc0a9c584ef379c777a560000a08baedb0",
    image = "l.gcr.io/google/ubuntu2004",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(oci, "ubuntu2004", "ubuntu2004_linux_amd64", "ubuntu2004_linux_arm64_v8")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

#############################
# Dolt release for e2e tests
#############################

# We use dolt-1.5.0 as a version that does not have `call
# dolt_cluster_transition_to_standby()` to assert correct behavior of
# `gracefulfailover` when that procedure is missing.
http_archive(
    name = "dolt_1_5_0_release_linux_amd64",
    build_file_content = """
exports_files(["bin/dolt"])
""",
    sha256 = "c4c0fca3609b749e4827e198a79cd1168480fbda8a924259bfb6b4fa6573e6b6",
    strip_prefix = "dolt-linux-amd64",
    urls = [
        "https://github.com/dolthub/dolt/releases/download/v1.5.0/dolt-linux-amd64.tar.gz",
    ],
)

http_archive(
    name = "dolt_release_linux_amd64",
    build_file_content = """
exports_files(["bin/dolt"])
""",
    sha256 = "4a9b15c5fe93a99a95905edb6beb61c691957c763f1fe47556e68edb43835507",
    strip_prefix = "dolt-linux-amd64",
    urls = [
        "https://github.com/dolthub/dolt/releases/download/v1.43.13/dolt-linux-amd64.tar.gz",
    ],
)

##################################
# toxiproxy release for e2e tests
##################################

http_archive(
    name = "toxiproxy_release_linux_amd64",
    build_file_content = """
exports_files(["toxiproxy-server"])
""",
    sha256 = "ea4ab0ff1e43a9880ce4f2094c43fe534b6610d1fea97406dcaf8fe7bc210bce",
    urls = [
        "https://github.com/Shopify/toxiproxy/releases/download/v2.7.0/toxiproxy_2.7.0_linux_amd64.tar.gz",
    ],
)
