module(
    name = "com_github_dolthub_doltclusterctl",
)

bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_oci", version = "2.2.5")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1.2")
bazel_dep(name = "rules_shell", version = "0.8.0")

bazel_lib_toolchains = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
bazel_lib_toolchains.tar()

bazel_dep(name = "rules_go", version = "0.61.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.51.3", repo_name = "bazel_gazelle")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.4")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
go_deps.gazelle_default_attributes(
    build_file_generation = "on",
    directives = [
        "gazelle:proto disable_global",
    ],
)
use_repo(
    go_deps,
    "com_github_awslabs_amazon_ecr_credential_helper_ecr_login",
    "com_github_cenkalti_backoff_v4",
    "com_github_go_sql_driver_mysql",
    "com_github_google_safetext",
    "com_github_shopify_toxiproxy_v2",
    "com_github_stretchr_testify",
    "io_k8s_api",
    "io_k8s_apimachinery",
    "io_k8s_client_go",
    "io_k8s_sigs_e2e_framework",
    "io_k8s_sigs_kind",
)

use_repo(
    go_sdk,
    "go_host_compatible_sdk_label",
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "ubuntu2404",
    # Find at https://l.gcr.io/google/ubuntu2404
    digest = "sha256:a3f42c58c046edb5a18064c72294562bc1649bd616bc04149f39e39588faff34",
    image = "l.gcr.io/google/ubuntu2404",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(oci, "ubuntu2404", "ubuntu2404_linux_amd64", "ubuntu2404_linux_arm64_v8")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

#############################
# Dolt release for e2e tests
#############################

# We use dolt-1.5.0 as a version that does not have `call
# dolt_cluster_transition_to_standby()` to assert correct behavior of
# `gracefulfailover` when that procedure is missing.
http_archive(
    name = "dolt_1_5_0_release_linux_amd64",
    build_file_content = """
exports_files(["bin/dolt"])
""",
    sha256 = "c4c0fca3609b749e4827e198a79cd1168480fbda8a924259bfb6b4fa6573e6b6",
    strip_prefix = "dolt-linux-amd64",
    urls = [
        "https://github.com/dolthub/dolt/releases/download/v1.5.0/dolt-linux-amd64.tar.gz",
    ],
)

http_archive(
    name = "dolt_1_5_0_release_linux_arm64",
    build_file_content = """
exports_files(["bin/dolt"])
""",
    sha256 = "5b97e96119edc58aad89b15a28b1b8a55fbd7ec93eeb79342ff67b54f2f3b420",
    strip_prefix = "dolt-linux-arm64",
    urls = [
        "https://github.com/dolthub/dolt/releases/download/v1.5.0/dolt-linux-arm64.tar.gz",
    ],
)

http_archive(
    name = "dolt_release_linux_amd64",
    build_file_content = """
exports_files(["bin/dolt"])
""",
    sha256 = "7a110a74597876f830afa756cee80d7bbe1402bf7237e6752e68de3415e8e4e8",
    strip_prefix = "dolt-linux-amd64",
    urls = [
        "https://github.com/dolthub/dolt/releases/download/v2.1.9/dolt-linux-amd64.tar.gz",
    ],
)

http_archive(
    name = "dolt_release_linux_arm64",
    build_file_content = """
exports_files(["bin/dolt"])
""",
    sha256 = "3f6cca60036a10e6d0b59dcdc9332b70405baa11fec7433761e24ef0e0cbbe85",
    strip_prefix = "dolt-linux-arm64",
    urls = [
        "https://github.com/dolthub/dolt/releases/download/v2.1.9/dolt-linux-arm64.tar.gz",
    ],
)

##################################
# toxiproxy release for e2e tests
##################################

http_archive(
    name = "toxiproxy_release_linux_amd64",
    build_file_content = """
exports_files(["toxiproxy-server"])
""",
    sha256 = "ea4ab0ff1e43a9880ce4f2094c43fe534b6610d1fea97406dcaf8fe7bc210bce",
    urls = [
        "https://github.com/Shopify/toxiproxy/releases/download/v2.7.0/toxiproxy_2.7.0_linux_amd64.tar.gz",
    ],
)

http_archive(
    name = "toxiproxy_release_linux_arm64",
    build_file_content = """
exports_files(["toxiproxy-server"])
""",
    sha256 = "7675a0b598e02c542a8818eacd7e300505b682ad257edfdbe05c5a11350ba050",
    urls = [
        "https://github.com/Shopify/toxiproxy/releases/download/v2.7.0/toxiproxy_2.7.0_linux_arm64.tar.gz",
    ],
)
