load("@io_bazel_rules_go//go:def.bzl", "go_test")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_test(
    name = "e2e_test",
    srcs = [
        "applyprimarylabels_test.go",
        "configmap_test.go",
        "deployment_test.go",
        "gracefulfailover_test.go",
        "main_test.go",
        "promotestandby_test.go",
        "rollingrestart_test.go",
        "rundolt_test.go",
        "serviceaccount_test.go",
        "services_test.go",
        "statefulset_test.go",
        "testpod_test.go",
        "tls_test.go",
    ],
    tags = ["manual"],
    deps = [
        "@io_k8s_api//apps/v1:apps",
        "@io_k8s_api//batch/v1:batch",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_api//rbac/v1:rbac",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/labels",
        "@io_k8s_apimachinery//pkg/util/intstr",
        "@io_k8s_apimachinery//pkg/util/wait",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_sigs_e2e_framework//klient/k8s",
        "@io_k8s_sigs_e2e_framework//klient/k8s/resources",
        "@io_k8s_sigs_e2e_framework//klient/wait",
        "@io_k8s_sigs_e2e_framework//klient/wait/conditions",
        "@io_k8s_sigs_e2e_framework//pkg/env",
        "@io_k8s_sigs_e2e_framework//pkg/envconf",
        "@io_k8s_sigs_e2e_framework//pkg/envfuncs",
        "@io_k8s_sigs_e2e_framework//pkg/features",
    ],
)

sh_test(
    name = "e2e",
    srcs = ["run.sh"],
    data = [
        ":dolt.tar",
        ":dolt-1.5.0.tar",
        ":e2e_test",
        ":toxiproxy.tar",
        "//:image.tar",
        "//e2e/incluster:incluster.tar",
        "@io_k8s_sigs_kind//:kind",
    ],
    tags = ["manual"],
)

pkg_tar(
    name = "dolt_layer",
    srcs = ["@dolt_release_linux_amd64//:bin/dolt"],
    package_dir = "/usr/local/bin",
)

oci_image(
    name = "dolt",
    base = "@ubuntu2004",
    tars = [":dolt_layer"],
    visibility = ["//visibility:private"],
)

oci_tarball(
    name = "dolt.tar",
    image = ":dolt",
    repo_tags = ["dolt:latest"],
    visibility = ["//visibility:private"],
)

pkg_tar(
    name = "dolt_1_5_0_layer",
    srcs = ["@dolt_1_5_0_release_linux_amd64//:bin/dolt"],
    package_dir = "/usr/local/bin",
)

oci_image(
    name = "dolt_1_5_0",
    base = "@ubuntu2004",
    tars = [":dolt_1_5_0_layer"],
    visibility = ["//visibility:private"],
)

oci_tarball(
    name = "dolt-1.5.0.tar",
    image = ":dolt_1_5_0",
    repo_tags = ["dolt:v1.5.0"],
    visibility = ["//visibility:private"],
)

pkg_tar(
    name = "toxiproxy_layer",
    srcs = ["@toxiproxy_release_linux_amd64//:toxiproxy-server"],
    package_dir = "/usr/local/bin",
)

oci_image(
    name = "toxiproxy",
    base = "@ubuntu2004",
    tars = [":toxiproxy_layer"],
    visibility = ["//visibility:private"],
)

oci_tarball(
    name = "toxiproxy.tar",
    image = ":toxiproxy",
    repo_tags = ["toxiproxy:latest"],
    visibility = ["//visibility:private"],
)
