load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_push")

oci_push(
    name = "_push_public_image",
    image = "//:image",
    remote_tags = ["latest"],
    repository = "public.ecr.aws/dolthub/doltclusterctl",
    visibility = ["//visibility:private"],
)

sh_binary(
    name = "push",
    srcs = ["push.sh"],
    data = [
        ":_push_public_image",
        ":awsconfig",
        ":config.json",
        "@com_github_awslabs_amazon_ecr_credential_helper_ecr_login//cli/docker-credential-ecr-login",
    ],
    visibility = ["//visibility:public"],
)

go_library(
    name = "push_lib",
    srcs = ["main.go"],
    importpath = "github.com/dolthub/doltclusterctl/push",
    visibility = ["//visibility:private"],
    deps = ["@com_github_awslabs_amazon_ecr_credential_helper_ecr_login//:ecr-login"],
)
