load("@io_bazel_rules_go//go:def.bzl", "go_test")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_test(
    name = "incluster_test",
    testonly = False,
    srcs = ["main_test.go"],
    goarch = "amd64",
    goos = "linux",
    deps = [
        "@com_github_cenkalti_backoff_v4//:backoff",
        "@com_github_go_sql_driver_mysql//:mysql",
        "@com_github_shopify_toxiproxy_v2//client",
    ],
)

pkg_tar(
    name = "incluster_layer",
    srcs = [
        ":incluster_test",
    ],
    include_runfiles = True,
    package_dir = "/app",
)

oci_image(
    name = "incluster",
    base = "@ubuntu2004",
    tars = [":incluster_layer"],
)

oci_tarball(
    name = "incluster.tar",
    image = ":incluster",
    repo_tags = ["incluster:latest"],
    visibility = ["//visibility:public"],
)
