load("@io_bazel_rules_go//go:def.bzl", "go_test")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")

go_test(
    name = "incluster_test",
    testonly = False,
    srcs = ["main_test.go"],
    goarch = "amd64",
    goos = "linux",
    deps = [
        "@com_github_cenkalti_backoff_v4//:backoff",
        "@com_github_go_sql_driver_mysql//:mysql",
        "@com_github_shopify_toxiproxy_v2//client",
    ],
)

pkg_tar(
    name = "incluster_layer",
    srcs = [
        ":incluster_test",
    ],
    include_runfiles = True,
    package_dir = "/app",
)

platform_transition_filegroup(
    name = "incluster_layer_transitioned",
    srcs = [
        ":incluster_layer",
    ],
    visibility = ["//visibility:private"],
    target_platform = "//:x86_64-linux",
)

oci_image(
    name = "incluster",
    base = "@ubuntu2004",
    tars = [":incluster_layer_transitioned"],
)

oci_load(
    name = "incluster_loaded",
    image = ":incluster",
    repo_tags = ["incluster:latest"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "incluster.tar",
    srcs = [":incluster_loaded"],
    output_group = "tarball",
    visibility = ["//visibility:public"],
)
